Fixed the z-index issue for user test prompt

--- a/src/assets/unmoderated-test.css
+++ b/src/assets/unmoderated-test.css
@@ -1,5 +1,6 @@
 .crowd-prompt {
   position: fixed;
+  z-index: 5000;
 }
 
 .crowd-prompt iframe {
